<resources>
    <string name="app_name">Sales Partner V2.1</string>
    <string name="menu1">Productos</string>
    <string name="menu2">Ordenes</string>
    <string name="menu3">Ensambles</string>
    <string name="menu4">Reportes</string>
    <string name="menu5">Clientes</string>
    <string name="menu6">Información</string>
    <string name="action_search">Buscar</string>
    <string name="search_assembly">Buscar ensamble: </string>
    <string name="filter">Introducir filtro</string>
    <string name="action_add">Agregar</string>
    <string name="assembly">Ensamble: </string>
    <string name="AboutAssembly">Especificaciones del ensamble</string>
    <string name="TotalCost">Costo total: </string>
    <string name="AboutProduct">Especificaciones del producto</string>
    <string name="category">Categoria: </string>
    <string name="description">Descripción</string>
    <string name="price">Precio: </string>
    <string name="quantity">Cantidad en Stock: </string>
    <string name="categoriesSpinner">Categorias</string>
    <string name="search_product">Buscar producto</string>
    <string name="a">{item.getItemId()}</string>
    <string name="orderStatus">Estado de la orden</string>
    <string name="clients">Clientes</string>
    <string name="initialDate">Fecha inicial</string>
    <string name="finalDate">Fecha final</string>
    <string name="filterDate">Filtrar fecha</string>
    <string name="selection">Seleccionar</string>
    <string name="action_save">Guardar</string>
    <string name="client">Cliente: </string>
    <string name="for_all">Selecciona</string>
</resources>
